--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <div id="prestations">
         <div class="imagesPrestations">
           <h4>One Piece</h4>
-          <a href="#"><img src="media/carte.JPG" alt="carte"></a>
+          <a href="https://mega.nz/folder/k4lAzRzY#NCWI1sQ0I4au4HpXILHdKw"><img src="media/carte.JPG" alt="carte"></a>
         </div>
         <div class="imagesPrestations">
           <h4>Boku No Hero Academia</h4>
-          <a href="#"><img src="media/chambre.JPG" alt="chambre"></a>
+          <a href="https://mega.nz/folder/rmpx3RBB#GmFYS7tDRKDXD--LkDA_Kg"> <img src="media/chambre.JPG" alt="chambre"></a>
         </div>
         <div class="imagesPrestations">
           <h4>Spy X Fammily</h4>
